# thalestradingbot

./: .coverage  .env  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh.md  deeppowerlaw.sh  ideas.md  isitapowerlaw.sh  jenson_inequality.py  main.py  pyproject.toml  pytest.ini  story.md  tradinglog.md
.githooks/: pre-push
Documentation/: pairtradingmpr.Rmd
backtest/: core.py  visualization.py
book/: README.md
book/leadandfollow/: README.md
book/move/: filter_noise_and_see_nonlinear_change.md
book/theory/: README.md
documentation/: pairtradingmpr.Rmd
expression/: four_leg_zhipu_view.md
fentu/: constants.py  core.py  ftxapiclient.py  strategy.py
fentu/accountingservices/: calculate_stock_dilute_cost.py
fentu/acquistionservices/: historicplot.py
fentu/dataservices/: download_data_range.py
fentu/explatoryservices/: bacexpectedreturn.py  high_low_levels.py  (+14 more)
research/: zhipu-research.md
tests/: test_GELU_tlt.py  test_acquistion_services.py  test_austrian_strategy.py  test_backtest_strategy.py  test_blackswam_alert.py  test_buycall.py  test_calculate_dilute_cost.py  test_calendar_year.py  test_call.py  test_call_theorticial_price.py  test_callspread.py  test_chaosking.py  test_cointegration_plot_line_count.py  test_crisis_study.py  test_fit_power_law_slope.py  test_ftx_connection.py  test_function_length_powerlaw.py  test_furtures_parity.py  test_hedge_ratio.py  test_high_low_levels.py  test_historic_option_price.py  test_historicplot.py  test_iv_term_structure.py  test_leadboard_performance.py  test_loss_cost_model.py  test_morning_brief.py  test_option_pricing.py  test_pandl.py  test_performance_calculator.py  test_plotting_service_kurtosis.py  test_portfolio_monitor.py  test_price_log_returns.py  test_put_call_parity.py  test_qqplot.py  test_quantify_tail_risk_qqq.py  test_split_train_and_test.py  test_stable_distribution.py  test_tlt_covid_crisis_study.py  test_unit_calendar_price.py  test_vix.py  (+4 more)
(+32 files in other folders)
