[tool.poetry]
name = "thalestradingbot"
version = "0.1.0"
description = ""
authors = ["chenxu10 <shenxu2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
py-vollib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
