[tool.poetry]
name = "thalestradingbot"
version = "0.1.0"
description = ""
authors = ["chenxu10 <shenxu2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
py-vollib = "^1.0.1"
yfinance = "^0.2.54"



[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Ignore the testfun directory during test collection
norecursedirs = ["tests/testfun"]

[project]
authors = [
    {name = "chenxu10", email = "shenxu2011@gmail.com"},
]
requires-python = "<4.0,>=3.8"
dependencies = [
    "pytest<9.0.0,>=8.3.3",
    "py-vollib<2.0.0,>=1.0.1",
    "yfinance<1.0.0,>=0.2.54",
    "matplotlib>=3.7.5",
    "statsmodels>=0.14.1",
    "seaborn>=0.13.2",
]
name = "thalestradingbot"
version = "0.1.0"
description = ""
readme = "README.md"
